Implement login HTML

--- a/index.html
+++ b/index.html
@@ -23,6 +23,26 @@
 
     </header>
 
+    <main>
+        <h1>Welcome to Plantr!</h1>
+        <form method="get" action="./greenhouse.html">
+            <div>
+                <span>ID</span>
+                <input type="text" placeholder="Greenhouse ID" />
+            </div>
+          <div>
+            <span>@</span>
+            <input type="text" placeholder="your@email.com" />
+          </div>
+          <div>
+            <span>🔒</span>
+            <input type="password" placeholder="password" />
+          </div>
+          <button type="submit">Login</button>
+          <button type="submit">Create</button>
+        </form>
+      </main>
+
     <footer>
         <hr />
         <span class="text-reset">Sadie Crapo</span>
