Implement greenhouse HTML

--- a/greenhouse.html
+++ b/greenhouse.html
@@ -9,8 +9,6 @@
 
 <body>
     <header>
-        <h1>Simon<sup>&reg;</sup></h1>
-
         <!-- Navigation elements -->
         <nav>
             <menu>
@@ -22,6 +20,43 @@
         </nav>
 
     </header>
+
+    <main>
+        <div>
+            <table>
+                <tr>
+                    <td>
+                        <!-- Image placeholder -->
+                    </td>
+                    <td>
+                        <!-- Image placeholder -->
+                    </td>
+                    <td>
+                        <!-- Image placeholder -->
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <!-- Image placeholder -->
+                    </td>
+                    <td>
+                        <!-- Image placeholder -->
+                    </td>
+                    <td>
+                        <!-- Image placeholder -->
+                    </td>
+                </tr>
+            </table>
+        </div>
+
+        <br />
+
+        <div>
+            <button>Plant</button>
+            <button>Feed</button>
+            <button>Water</button>
+        </div>
+    </main>
 
     <footer>
         <hr />
