Implement field guide HTML

--- a/field-guide.html
+++ b/field-guide.html
@@ -9,8 +9,7 @@
 
 <body>
     <header>
-        <h1>Simon<sup>&reg;</sup></h1>
-
+        <h3>Welcome MysteryUser!</h3>
         <!-- Navigation elements -->
         <nav>
             <menu>
@@ -22,6 +21,46 @@
         </nav>
 
     </header>
+
+    <main>
+        <div>
+            <p>
+                <input type="checkbox" value="checkbox1" />
+                Fold Laundry
+            </p>
+        </div>
+
+        <div>
+            <p>
+                <input type="checkbox" value="checkbox1" />
+                Grocery Shopping
+            </p>
+        </div>
+
+        <div>
+            <p>
+                <input type="checkbox" value="checkbox1" checked/>
+                <s>Study</s>
+                <br />
+                Completed by MysteryUser
+            </p>
+        </div>
+
+        <div>
+            <p>
+                <input type="checkbox" value="checkbox1" checked />
+                <s>Wash Dishes</s>
+                <br />
+                Completed by SecretUser16
+            </p>
+        </div>
+
+        <br />
+
+        <div>
+            <button>New Task</button>
+        </div>
+    </main>
 
     <footer>
         <hr />
