--- a/greenhouse.html
+++ b/greenhouse.html
@@ -9,6 +9,7 @@
 
 <body>
     <header>
+        <h3>Welcome MysteryUser!</h3>
         <!-- Navigation elements -->
         <nav>
             <menu>
