Implement backpack HTML

--- a/backpack.html
+++ b/backpack.html
@@ -23,6 +23,50 @@
 
     </header>
 
+    <main>
+        <div>
+            <table>
+                <tr>
+                    <td>
+                        <!-- Image placeholder -->
+                        <p>Rose x3</p>
+                    </td>
+                    <td>
+                        <!-- Image placeholder -->
+                        <p>Daisy x1</p>
+                    </td>
+                    <td>
+                        <!-- Image placeholder -->
+                        <p>Haworthia x2</p>
+                    </td>
+                    <td>
+                        <!-- Image placeholder -->
+                        <p>Monstera x4</p>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <!-- Image placeholder -->
+                        <p>Terracota x1</p>
+                    </td>
+                    <td>
+                        <!-- Image placeholder -->
+                        <p>Hanging x3</p>
+                    </td>
+                    <td>
+                        <!-- Image placeholder -->
+                        <p>Marble x2</p>
+                    </td>
+                    <td>
+                        <!-- Image placeholder -->
+                        <p>Jar x1</p>
+                    </td>
+                </tr>
+            </table>
+        </div>
+    </main>
+
+
     <footer>
         <hr />
         <span class="text-reset">Sadie Crapo</span>
