Add img tags to greenhouse.html and backpack.html

--- a/backpack.html
+++ b/backpack.html
@@ -28,37 +28,37 @@
             <table>
                 <tr>
                     <td>
-                        <!-- Image placeholder -->
+                        <img alt="A rosebush" />
                         <p>Rose x3</p>
                     </td>
                     <td>
-                        <!-- Image placeholder -->
+                        <img alt="A daisy" />
                         <p>Daisy x1</p>
                     </td>
                     <td>
-                        <!-- Image placeholder -->
+                        <img alt="A haworthia plant" />
                         <p>Haworthia x2</p>
                     </td>
                     <td>
-                        <!-- Image placeholder -->
+                        <img alt="A monstera plant" />
                         <p>Monstera x4</p>
                     </td>
                 </tr>
                 <tr>
                     <td>
-                        <!-- Image placeholder -->
+                        <img alt="A terracota pot" />
                         <p>Terracota x1</p>
                     </td>
                     <td>
-                        <!-- Image placeholder -->
+                        <img alt="A hanging planter" />
                         <p>Hanging x3</p>
                     </td>
                     <td>
-                        <!-- Image placeholder -->
+                        <img alt="A marble pot" />
                         <p>Marble x2</p>
                     </td>
                     <td>
-                        <!-- Image placeholder -->
+                        <img alt="A glass jar" />
                         <p>Jar x1</p>
                     </td>
                 </tr>
