--- a/greenhouse.html
+++ b/greenhouse.html
@@ -27,24 +27,24 @@
             <table>
                 <tr>
                     <td>
-                        <!-- Image placeholder -->
+                        <img alt="A plant growing in a pot" />
                     </td>
                     <td>
-                        <!-- Image placeholder -->
+                        <img alt="A plant growing in a pot" />
                     </td>
                     <td>
-                        <!-- Image placeholder -->
+                        <img alt="A plant growing in a pot" />
                     </td>
                 </tr>
                 <tr>
                     <td>
-                        <!-- Image placeholder -->
+                        <img alt="A plant growing in a pot" />
                     </td>
                     <td>
-                        <!-- Image placeholder -->
+                        <img alt="A plant growing in a pot" />
                     </td>
                     <td>
-                        <!-- Image placeholder -->
+                        <img alt="A plant growing in a pot" />
                     </td>
                 </tr>
             </table>
