--- a/backpack.html
+++ b/backpack.html
@@ -9,8 +9,7 @@
 
 <body>
     <header>
-        <h1>Simon<sup>&reg;</sup></h1>
-
+        <h3>Welcome MysteryUser!</h3>
         <!-- Navigation elements -->
         <nav>
             <menu>
