Add first sample image

--- a/backpack.html
+++ b/backpack.html
@@ -45,7 +45,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <img alt="A terracota pot" />
+                        <img src="./images/terracotta-pot.png" width="200" alt="A terracotta pot" />
                         <p>Terracota x1</p>
                     </td>
                     <td>
