Fix typo in backpack.html

--- a/backpack.html
+++ b/backpack.html
@@ -46,7 +46,7 @@
                 <tr>
                     <td>
                         <img src="./images/terracotta-pot.png" width="200" alt="A terracotta pot" />
-                        <p>Terracota x1</p>
+                        <p>Terracotta x1</p>
                     </td>
                     <td>
                         <img alt="A hanging planter" />
