--- a/index.html
+++ b/index.html
@@ -5,33 +5,47 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="index.css" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
-      crossorigin="anonymous"
-    />
+
+    <!-- Include bootstrap CSS framework -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous" />
+
     <title>Plantr Login</title>
 </head>
 
 <body>
-    <header>
+    <header class="container-fluid">
         <!-- Navigation elements -->
+        <!-- <nav class="navbar"> -->
         <nav>
+            <!-- <menu class="navbar-nav"> -->
             <menu>
-                <li><a href="./index.html">Login</a></li>
-                <li><a href="./greenhouse.html">Greenhouse</a></li>
-                <li><a href="./field-guide.html">Field Guide</a></li>
-                <li><a href="./backpack.html">Backpack</a></li>
+                <li class="nav-item"><a class="nav-link active" href="./index.html">Login</a></li>
+                <li class="nav-item"><a class="nav-link" href="./greenhouse.html">Greenhouse</a></li>
+                <li class="nav-item"><a class="nav-link" href="./field-guide.html">Field Guide</a></li>
+                <li class="nav-item"><a class="nav-link" href="./backpack.html">Backpack</a></li>
             </menu>
         </nav>
 
     </header>
 
-    <main>
+    <main class="container-fluid text-center">
         <h1>Welcome to Plantr!</h1>
         <form method="get" action="./greenhouse.html">
-            <div>
+            <div class="input-group mb-3">
+                <!-- <span class="input-group-text">ID</span> -->
+                <input class="form-control" type="text" placeholder="Greenhouse ID" />
+            </div>
+            <div class="input-group mb-3">
+                <!-- <span class="input-group-text">@</span> -->
+                <input class="form-control" type="text" placeholder="your@email.com" />
+            </div>
+            <div class="input-group mb-3">
+                <!-- <span class="input-group-text">🔒</span> -->
+                <input class="form-control" type="password" placeholder="password" />
+            </div>
+
+            <!-- <div>
                 <span>ID</span>
                 <input type="text" placeholder="Greenhouse ID" />
             </div>
@@ -42,17 +56,20 @@
             <div>
                 <span>🔒</span>
                 <input type="password" placeholder="password" />
-            </div>
-            <button type="submit">Login</button>
-            <button type="submit">Create</button>
+            </div> -->
+            <button type="submit" class="btn btn-primary">Login</button>
+            <button type="submit" class="btn btn-secondary">Create</button>
         </form>
     </main>
 
-    <footer>
-        <hr />
-        <span class="text-reset">Sadie Crapo</span>
-        <br />
-        <a href="https://github.com/SadieCrapo/Startup">GitHub</a>
+    <footer class="container-fluid">
+        <!-- <hr /> -->
+        <div>
+            <span>Sadie Crapo</span>
+            <!-- <br /> -->
+            <!-- <a href="https://github.com/SadieCrapo/Startup">GitHub</a> -->
+            <a href="https://github.com/SadieCrapo/Startup" class="text-reset">GitHub</a>
+        </div>
     </footer>
 </body>
 
