--- a/greenhouse.html
+++ b/greenhouse.html
@@ -4,74 +4,90 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="main.css" />
     <link rel="stylesheet" href="greenhouse.css" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
-      crossorigin="anonymous"
-    />
+
+    <!-- Include bootstrap CSS framework -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous" />
     <title>Greenhouse</title>
 </head>
 
 <body>
+    <!-- <header class="container-fluid"> -->
     <header>
-        <h3>Welcome MysteryUser!</h3>
         <!-- Navigation elements -->
         <nav>
+            <!-- <div>NavBar</div> -->
             <menu>
-                <li><a href="./index.html">Login</a></li>
-                <li><a href="./greenhouse.html">Greenhouse</a></li>
-                <li><a href="./field-guide.html">Field Guide</a></li>
-                <li><a href="./backpack.html">Backpack</a></li>
+                <li class="nav-item"><a class="nav-link" href="./index.html">Login</a></li>
+                <li class="nav-item"><a class="nav-link active" href="./greenhouse.html">Greenhouse</a></li>
+                <li class="nav-item"><a class="nav-link" href="./field-guide.html">Field Guide</a></li>
+                <li class="nav-item"><a class="nav-link" href="./backpack.html">Backpack</a></li>
             </menu>
         </nav>
+
+        <div class="logo">
+            <span>LOGO</span>
+        </div>
+        <div class="welcome-user">
+            <span>Welcome MysteryUser!</span>
+        </div>
 
     </header>
 
     <main>
-        <div>
-            <table>
-                <tr>
-                    <td>
-                        <img alt="A plant growing in a pot" />
-                    </td>
-                    <td>
-                        <img alt="A plant growing in a pot" />
-                    </td>
-                    <td>
-                        <img alt="A plant growing in a pot" />
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <img alt="A plant growing in a pot" />
-                    </td>
-                    <td>
-                        <img alt="A plant growing in a pot" />
-                    </td>
-                    <td>
-                        <img alt="A plant growing in a pot" />
-                    </td>
-                </tr>
-            </table>
+        <div class="shelves">
+            <div class="plant">
+                <img alt="A plant growing in a pot" />
+            </div>
+            <div class="plant">
+                <img alt="A plant growing in a pot" />
+            </div>
+            <div class="plant">
+                <img alt="A plant growing in a pot" />
+            </div>
+            <div class="plant">
+                <img alt="A plant growing in a pot" />
+            </div>
+            <div class="plant">
+                <img alt="A plant growing in a pot" />
+            </div>
+            <div class="plant">
+                <img alt="A plant growing in a pot" />
+            </div>
+            <div class="plant">
+                <img alt="A plant growing in a pot" />
+            </div>
+            <div class="plant">
+                <img alt="A plant growing in a pot" />
+            </div>
+            <div class="plant">
+                <img alt="A plant growing in a pot" />
+            </div>
+            <div class="plant">
+                <img alt="A plant growing in a pot" />
+            </div>
+            <div class="plant">
+                <img alt="A plant growing in a pot" />
+            </div>
+            <div class="plant">
+                <img alt="A plant growing in a pot" />
+            </div>
         </div>
-
-        <br />
-
-        <div>
-            <button>Plant</button>
-            <button>Feed</button>
-            <button>Water</button>
+        <div class="tools">
+            <button class="action-button">Plant</button>
+            <button class="action-button">Feed</button>
+            <button class="action-button">Water</button>
         </div>
     </main>
 
-    <footer>
-        <hr />
-        <span class="text-reset">Sadie Crapo</span>
-        <br />
-        <a href="https://github.com/SadieCrapo/Startup">GitHub</a>
+    <footer class="container-fluid">
+        <div>
+            <span>Sadie Crapo</span>
+            <!-- <a href="https://github.com/SadieCrapo/Startup">GitHub</a> -->
+            <a href="https://github.com/SadieCrapo/Startup" class="text-reset">GitHub</a>
+        </div>
     </footer>
 </body>
 
