--- a/field-guide.html
+++ b/field-guide.html
@@ -4,77 +4,81 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="main.css" />
     <link rel="stylesheet" href="field-guide.css" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
-      crossorigin="anonymous"
-    />
+
+    <!-- Include bootstrap CSS framework -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous" />
     <title>Field Guide</title>
 </head>
 
 <body>
     <header>
-        <h3>Welcome MysteryUser!</h3>
         <!-- Navigation elements -->
         <nav>
             <menu>
-                <li><a href="./index.html">Login</a></li>
-                <li><a href="./greenhouse.html">Greenhouse</a></li>
-                <li><a href="./field-guide.html">Field Guide</a></li>
-                <li><a href="./backpack.html">Backpack</a></li>
+                <li class="nav-item"><a class="nav-link" href="./index.html">Login</a></li>
+                <li class="nav-item"><a class="nav-link" href="./greenhouse.html">Greenhouse</a></li>
+                <li class="nav-item"><a class="nav-link active" href="./field-guide.html">Field Guide</a></li>
+                <li class="nav-item"><a class="nav-link" href="./backpack.html">Backpack</a></li>
             </menu>
         </nav>
+        <div class="logo">
+            <span>LOGO</span>
+        </div>
+        <div class="welcome-user">
+            <span>Welcome MysteryUser!</span>
+        </div>
 
     </header>
 
     <main>
-        <div>
-            <p>
-                <input type="checkbox" value="checkbox1" />
-                Fold Laundry
-            </p>
+        <div class="list">
+            <div class="list-item">
+                <p>
+                    <input type="checkbox" value="checkbox1" />
+                    Fold Laundry
+                </p>
+            </div>
+
+            <div class="list-item">
+                <p>
+                    <input type="checkbox" value="checkbox1" />
+                    Grocery Shopping
+                </p>
+            </div>
+
+            <div class="list-item">
+                <p>
+                    <input type="checkbox" value="checkbox1" checked />
+                    <s>Study</s>
+                    <br />
+                    Completed by MysteryUser
+                </p>
+            </div>
+
+            <div class="list-item">
+                <p>
+                    <input type="checkbox" value="checkbox1" checked />
+                    <s>Wash Dishes</s>
+                    <br />
+                    Completed by SecretUser16
+                </p>
+            </div>
         </div>
 
-        <div>
-            <p>
-                <input type="checkbox" value="checkbox1" />
-                Grocery Shopping
-            </p>
-        </div>
-
-        <div>
-            <p>
-                <input type="checkbox" value="checkbox1" checked/>
-                <s>Study</s>
-                <br />
-                Completed by MysteryUser
-            </p>
-        </div>
-
-        <div>
-            <p>
-                <input type="checkbox" value="checkbox1" checked />
-                <s>Wash Dishes</s>
-                <br />
-                Completed by SecretUser16
-            </p>
-        </div>
-
-        <br />
-
-        <div>
-            <button>New Task</button>
+        <div class="tools">
+            <button class="action-button">New Task</button>
         </div>
     </main>
 
-    <footer>
-        <hr />
-        <span class="text-reset">Sadie Crapo</span>
-        <br />
-        <a href="https://github.com/SadieCrapo/Startup">GitHub</a>
+    <footer class="container-fluid">
+        <div>
+            <span>Sadie Crapo</span>
+            <!-- <a href="https://github.com/SadieCrapo/Startup">GitHub</a> -->
+            <a href="https://github.com/SadieCrapo/Startup" class="text-reset">GitHub</a>
+        </div>
     </footer>
 </body>
 
