--- a/backpack.html
+++ b/backpack.html
@@ -4,81 +4,79 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="main.css" />
     <link rel="stylesheet" href="backpack.css" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
-      crossorigin="anonymous"
-    />
+
+    <!-- Include bootstrap CSS framework -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous" />
     <title>Backpack</title>
 </head>
 
 <body>
     <header>
-        <h3>Welcome MysteryUser!</h3>
         <!-- Navigation elements -->
         <nav>
             <menu>
-                <li><a href="./index.html">Login</a></li>
-                <li><a href="./greenhouse.html">Greenhouse</a></li>
-                <li><a href="./field-guide.html">Field Guide</a></li>
-                <li><a href="./backpack.html">Backpack</a></li>
+                <li class="nav-item"><a class="nav-link" href="./index.html">Login</a></li>
+                <li class="nav-item"><a class="nav-link" href="./greenhouse.html">Greenhouse</a></li>
+                <li class="nav-item"><a class="nav-link" href="./field-guide.html">Field Guide</a></li>
+                <li class="nav-item"><a class="nav-link active" href="./backpack.html">Backpack</a></li>
             </menu>
         </nav>
+        <div class="logo">
+            <span>LOGO</span>
+        </div>
+        <div class="welcome-user">
+            <span>Welcome MysteryUser!</span>
+        </div>
 
     </header>
 
     <main>
-        <div>
-            <table>
-                <tr>
-                    <td>
-                        <img alt="A rosebush" />
-                        <p>Rose x3</p>
-                    </td>
-                    <td>
-                        <img alt="A daisy" />
-                        <p>Daisy x1</p>
-                    </td>
-                    <td>
-                        <img alt="A haworthia plant" />
-                        <p>Haworthia x2</p>
-                    </td>
-                    <td>
-                        <img alt="A monstera plant" />
-                        <p>Monstera x4</p>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <img src="./images/terracotta-pot.png" width="200" alt="A terracotta pot" />
-                        <p>Terracotta x1</p>
-                    </td>
-                    <td>
-                        <img alt="A hanging planter" />
-                        <p>Hanging x3</p>
-                    </td>
-                    <td>
-                        <img alt="A marble pot" />
-                        <p>Marble x2</p>
-                    </td>
-                    <td>
-                        <img alt="A glass jar" />
-                        <p>Jar x1</p>
-                    </td>
-                </tr>
-            </table>
+        <div class="shelves">
+            <div class="item">
+                <img alt="A rosebush" />
+                <p>Rose x3</p>
+            </div>
+            <div class="item">
+                <img alt="A daisy" />
+                <p>Daisy x1</p>
+            </div>
+            <div class="item">
+                <img alt="A haworthia plant" />
+                <p>Haworthia x2</p>
+            </div>
+            <div class="item">
+                <img alt="A monstera plant" />
+                <p>Monstera x4</p>
+            </div>
+            <div class="item">
+                <img src="./images/terracotta-pot.png" width="200" alt="A terracotta pot" />
+                <p>Terracotta x1</p>
+            </div>
+            <div class="item">
+                <img alt="A hanging planter" />
+                <p>Hanging x3</p>
+            </div>
+            <div class="item">
+                <img alt="A marble pot" />
+                <p>Marble x2</p>
+            </div>
+            <div class="item">
+                <img alt="A glass jar" />
+                <p>Jar x1</p>
+            </div>
         </div>
     </main>
 
 
-    <footer>
-        <hr />
-        <span class="text-reset">Sadie Crapo</span>
-        <br />
-        <a href="https://github.com/SadieCrapo/Startup">GitHub</a>
+    <footer class="container-fluid">
+        <div>
+            <span>Sadie Crapo</span>
+            <!-- <a href="https://github.com/SadieCrapo/Startup">GitHub</a> -->
+            <a href="https://github.com/SadieCrapo/Startup" class="text-reset">GitHub</a>
+        </div>
     </footer>
 </body>
 
