--- a/greenhouse.html
+++ b/greenhouse.html
@@ -14,11 +14,9 @@
 </head>
 
 <body>
-    <!-- <header class="container-fluid"> -->
     <header>
         <!-- Navigation elements -->
         <nav>
-            <!-- <div>NavBar</div> -->
             <menu>
                 <li class="nav-item"><a class="nav-link" href="./index.html">Login</a></li>
                 <li class="nav-item"><a class="nav-link active" href="./greenhouse.html">Greenhouse</a></li>
@@ -82,7 +80,7 @@
         </div>
     </main>
 
-    <footer class="container-fluid">
+    <footer>
         <div>
             <span>Sadie Crapo</span>
             <!-- <a href="https://github.com/SadieCrapo/Startup">GitHub</a> -->
