Add deliverable notes to README.md

--- a/backpack.html
+++ b/backpack.html
@@ -71,7 +71,7 @@
     </main>
 
 
-    <footer class="container-fluid">
+    <footer>
         <div>
             <span>Sadie Crapo</span>
             <!-- <a href="https://github.com/SadieCrapo/Startup">GitHub</a> -->
