--- a/field-guide.html
+++ b/field-guide.html
@@ -73,7 +73,7 @@
         </div>
     </main>
 
-    <footer class="container-fluid">
+    <footer>
         <div>
             <span>Sadie Crapo</span>
             <!-- <a href="https://github.com/SadieCrapo/Startup">GitHub</a> -->
