--- a/src/login/login.html
+++ b/src/login/login.html
@@ -32,7 +32,7 @@
 
     <main class="text-center">
         <h1 class="welcome-message">Welcome to Plantr!</h1>
-        <form method="get" action="./greenhouse.html">
+        <form>
             <div class="input-group mb-3">
                 <!-- <span class="input-group-text">ID</span> -->
                 <input class="form-control" type="text" placeholder="Greenhouse ID" />
